# ugines_bot

./: README.md  bot.py  pyproject.toml
tests/: test_ugines_bot.py
